# Malet

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: docs.yml  update-changelog.yml
docs/: MALEP.md  MALET_NOTES.md  changelog.md  conf.py  contributing.md  experiment-log-api.md  index.md  installation.md
docs/_static/: custom.css
docs/advanced/: index.md  intermediate-checkpointing.md  merging-logs.md  parallel-splitting.md  wandb-integration.md
docs/examples/: index.md
docs/plotting/: animation.md  bar.md  curve.md  gallery.md  heatmap.md  index.md  multi-line.md  multi-plot.md  overview.md  scatter.md  styling.md
docs/quickstart/: gridding.md  index.md  prerequisite.md  running-experiments.md
examples/: train.py
scripts/: generate_changelog.py
src/malet/: __init__.py  experiment.py  merge_log.py  plot.py  utils.py
src/malet/plot_utils/: __init__.py  data_processor.py  plot_drawer.py  utils.py
tests/: conftest.py  test_config_iter.py  test_experiment_log.py  test_plot.py  test_plot_figures.py  test_resnet20_figures.py
tests/fixtures/: cifar10_resnet20_log.tsv  exp_config.yaml
tests/fixtures/test_exp/: exp_config.yaml  log.tsv  log2.tsv
